--- a/deepseek_1_7b_ollama.ipynb
+++ b/deepseek_1_7b_ollama.ipynb
@@ -470,8 +470,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "0162be0e-5270-43d0-8d3b-b27658acb46e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ollama\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "18c43342-c481-415a-b3fd-17b16268c86f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages=[{\n",
+    "        'role': 'user',\n",
+    "        'content': 'Teach me how to learn Generative AI'\n",
+    "    }]\n",
+    "\n",
+    "\n",
+    "response = ollama.chat(\n",
+    "    model='deepseek-r1:1.5b',\n",
+    "    messages=messages,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92e70599-757c-4642-b2a7-8319bf99fc00",
    "metadata": {},
    "outputs": [],
    "source": []
